Finalize rough styling for home and show pages. Display all answers and question vote weight for each question

--- a/stack-clone/app/assets/stylesheets/application.css
+++ b/stack-clone/app/assets/stylesheets/application.css
@@ -13,3 +13,17 @@
  *= require_tree .
  *= require_self
  */
+.vote-count {
+  color: gray;
+}
+
+.container {
+  width: 800px;
+  margin: auto;
+  padding: 15px;
+  border: dashed 1px black;
+}
+
+nav {
+  float: right;
+}
