--- a/stack-clone/app/views/questions/_question.html.erb
+++ b/stack-clone/app/views/questions/_question.html.erb
@@ -1,1 +1,7 @@
-<p><%= link_to question.title, question %></p>
+<p>
+  <span class='vote-count'>
+    <%= question.vote_count %>
+  </span>
+  <%= link_to question.title, question %>
+</p>
+<hr>
