--- a/stack-clone/app/assets/stylesheets/application.css
+++ b/stack-clone/app/assets/stylesheets/application.css
@@ -13,6 +13,23 @@
  *= require_tree .
  *= require_self
  */
+body {
+  font-family: helvetica, arial, sans-serif;
+}
+
+nav {
+  float: right;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  color: chocolate;
+}
+
 .vote-count {
   color: gray;
 }
@@ -22,8 +39,4 @@
   margin: auto;
   padding: 15px;
   border: dashed 1px black;
-}
-
-nav {
-  float: right;
 }
