--- a/stack-clone/app/views/layouts/application.html.erb
+++ b/stack-clone/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
 <div class='container'>
   <nav>
-    <%= link_to 'Login', '/sessions/new' %>
+    <%= link_to 'Login', '/sessions/new' %> |
     <%= link_to 'Home', '/' %>
   </nav>
 
