--- a/stack-clone/app/views/layouts/application.html.erb
+++ b/stack-clone/app/views/layouts/application.html.erb
@@ -9,8 +9,12 @@
 <body>
 <div class='container'>
   <nav>
-    <%= link_to 'Login', '/login' %> |
-    <%= link_to 'Home', '/' %>
+    <% if logged_in? %>
+      <%= link_to 'Logout', logout_path, method: :delete %> |
+    <% else %>
+      <%= link_to 'Login', '/login' %> |
+      <%= link_to 'Home', '/' %>
+    <% end %>
   </nav>
 
   <%= yield %>
