Add support for profile linking. Add partial logout support

--- a/stack-clone/app/views/answers/_answer.html.erb
+++ b/stack-clone/app/views/answers/_answer.html.erb
@@ -1,4 +1,4 @@
 <div class='question-wrapper'>
   <p><%= answer.body %></p>
-  <p><%= answer.author.username %></p>
+  <p>-<%= answer.author.username %></p>
 </div>
