--- a/stack-clone/app/views/layouts/application.html.erb
+++ b/stack-clone/app/views/layouts/application.html.erb
@@ -9,11 +9,12 @@
 <body>
 <div class='container'>
   <nav>
+    <%= link_to 'Home', '/' %> |
     <% if logged_in? %>
-      <%= link_to 'Logout', logout_path, method: :delete %> |
+      <%= link_to 'Profile', current_user %> |
+      <%= link_to 'Logout', logout_path, method: :delete %>
     <% else %>
-      <%= link_to 'Login', '/login' %> |
-      <%= link_to 'Home', '/' %>
+      <%= link_to 'Login', '/login' %>
     <% end %>
   </nav>
 
