--- a/stack-clone/app/assets/stylesheets/questions.scss
+++ b/stack-clone/app/assets/stylesheets/questions.scss
@@ -1,8 +1,14 @@
 // Place all the styles related to the questions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
 .question-wrapper {
   border: solid 1px black;
   margin: 5px auto;
   padding-left: 8px
+}
+
+.new-question-button {
+  width: 150px;
+  color: skyblue;
 }
