--- a/stack-clone/app/views/layouts/application.html.erb
+++ b/stack-clone/app/views/layouts/application.html.erb
@@ -11,10 +11,11 @@
   <nav>
     <%= link_to 'Home', '/' %> |
     <% if logged_in? %>
-      <%= link_to 'Profile', current_user %> |
+      <%= link_to current_user.name, current_user %> |
       <%= link_to 'Logout', logout_path, method: :delete %>
     <% else %>
-      <%= link_to 'Login', '/login' %>
+      <%= link_to 'Login', '/login' %> |
+      <%= link_to 'Register', users_new_path %>
     <% end %>
   </nav>
 
