--- a/stack-clone/app/views/questions/new.html.erb
+++ b/stack-clone/app/views/questions/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Questions#new</h1>
-<p>Find me in app/views/questions/new.html.erb</p>
+<%= form_for Question.new do |f| %>
+  <%= f.text_field :title %><br />
+  <%= f.text_area :question %><br />
+
+  <%= f.submit 'Ask This Question' %>
+<% end %>
