Change around the layout of the home page. Add links to edit/delete

--- a/stack-clone/app/views/questions/index.html.erb
+++ b/stack-clone/app/views/questions/index.html.erb
@@ -1,2 +1,4 @@
-<%= button_to 'Ask A New Question', new_question_path, method: 'get', class: "new-question-button" %>
+<% if logged_in? %>
+  <%= button_to 'Ask A New Question', new_question_path, method: 'get', class: "new-question-button" %>
+<% end %>
 <%= render @questions %>
