--- a/stack-clone/app/views/questions/new.html.erb
+++ b/stack-clone/app/views/questions/new.html.erb
@@ -1,5 +1,12 @@
+<% if @errors %>
+  <%= render partial: '/shared/errors' %>
+<% end %>
+
 <%= form_for Question.new do |f| %>
+  <%= f.label :title %><br />
   <%= f.text_field :title %><br />
+
+  <%= f.label :question %><br />
   <%= f.text_area :question %><br />
 
   <%= f.submit 'Ask This Question' %>
