Add support for editing or deleting questions

--- a/stack-clone/app/views/questions/new.html.erb
+++ b/stack-clone/app/views/questions/new.html.erb
@@ -2,7 +2,7 @@
   <%= render partial: '/shared/errors' %>
 <% end %>
 
-<%= form_for Question.new do |f| %>
+<%= form_for @question do |f| %>
   <%= f.label :title %><br />
   <%= f.text_field :title %><br />
 
