--- a/stack-clone/app/views/questions/_question.html.erb
+++ b/stack-clone/app/views/questions/_question.html.erb
@@ -5,7 +5,7 @@
   <%= link_to question.title, question %>
   <span class='question-options'>
     <% if logged_in? && owner?(question) %>
-      <%= link_to 'edit', question %>
+      <%= link_to 'edit', edit_question_path(question) %> |
       <%= link_to 'delete', question, method: :delete %>
     <% end %>
   </span>
