Add support for answering a question

--- a/stack-clone/app/assets/stylesheets/application.css
+++ b/stack-clone/app/assets/stylesheets/application.css
@@ -40,3 +40,11 @@ a:hover {
   padding: 15px;
   border: dashed 1px black;
 }
+
+.error-text {
+  color: red;
+}
+
+.error-text:before, .error-text:after {
+  content: '*';
+}
